--- a/providers/pom.xml
+++ b/providers/pom.xml
@@ -23,6 +23,7 @@
     <module>kerberos</module>
     <module>openldap</module>
     <module>sample</module>
+    <module>unboundid</module>
   </modules>
 
 
@@ -46,6 +47,11 @@
       <dependency>
         <groupId>org.sakaiproject</groupId>
         <artifactId>sakai-userdetail-provider</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.sakaiproject</groupId>
+        <artifactId>sakai-unboundid-provider</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
