--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,7 @@
                 <module>rwiki</module>
                 <module>tags</module>
                 <module>samigo</module>
+                <module>saml</module>
                 <module>search</module>
                 <module>sections</module>
                 <module>shortenedurl</module>
