CLASSES-1031 add wiris to the pom.xml so it builds...
git-svn-id: https://source.sakaiproject.org/svn/msub/nyu.edu/10.7/trunk@323783 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,7 @@
                 <module>web</module>
                 <module>webjars</module>
                 <module>webservices</module>
+                <module>wiris</module>
             </modules>
         </profile>
         <profile>
