--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
                 <module>archive</module>
                 <module>assignment</module>
                 <module>basiclti</module>
+                <module>blogwow</module>
                 <module>calendar</module>
                 <module>chat</module>
                 <module>citations</module>
