CLASSES-1043 Build bbb-tool by default

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
                 <module>archive</module>
                 <module>assignment</module>
                 <module>basiclti</module>
+                <module>bbb-tool</module>
                 <module>blogwow</module>
                 <module>calendar</module>
                 <module>chat</module>
