--- a/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/site-manage/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -1272,3 +1272,15 @@ sinfo.lessonbuildersubnav.name=Lessons subpage navigation
 sinfo.lessonbuildersubnav.allowForSite=Enable <strong>Lessons subpage navigation</strong> in the left tool menu.
 sinfo.lessonbuildersubnav.confirmEnabled=You have enabled the Lessons subpage navigation for this site.
 sinfo.lessonbuildersubnav.enabled=Enabled for the site
+
+# NYU Customisations
+java.edittools = Add/Edit Tools
+java.orderpages = Tool Order
+sitinfimp.import.user=I would like to merge my user(s)
+sitinfimp.import.user.info=Your imported user(s) will merge with existing users. This method does not import roster-provided users.
+sitinfimp.importgrades=Import from Site
+sitinfimp.import=Merge my documents and data.
+sitinfimp.import.info=<span class="alert alert-info">Imported documents/data will merge with existing data. This method does not import Gradebook and/or Lessons settings from previous sites.</span>
+sitinfimp.migrate=Replace my documents and data.
+sitinfimp.migrate.info=<span class="alert warning"><b>Warning!</b> Data within the destination site will be replaced with with the imported documents/data. However, this method allows you to import Gradebook and/or Lessons settings from previous sites.</span>
+
