CLASSES-1151 Migrate SCORM and supporting libraries

--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,8 @@
                 <module>tags</module>
                 <module>samigo</module>
                 <module>saml</module>
+                <module>sakai-wicket-for-scorm</module>
+                <module>scorm</module>
                 <module>search</module>
                 <module>sections</module>
                 <module>shortenedurl</module>
