Build nyuhome & nyugrades by default.

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,8 @@
                 <module>myconnections</module>
                 <module>oauth</module>
                 <module>pasystem</module>
+                <module>nyugrade</module>
+                <module>nyuhome-feed</module>
                 <module>podcasts</module>
                 <module>polls</module>
                 <module>portal</module>
