--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
                 <module>myconnections</module>
                 <module>oauth</module>
                 <module>pasystem</module>
-                <module>nyugrade</module>
+                <module>nyugrades</module>
                 <module>nyuhome-feed</module>
                 <module>podcasts</module>
                 <module>polls</module>
