--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,8 @@
                 <module>cmprovider</module>
                 <module>common</module>
                 <module>commons</module>
+                <module>common/import-parsers/blackboard_6</module>
+                <module>common/import-parsers/blackboard_9_nyu</module>
                 <module>config</module>
                 <module>cloud-content</module>
                 <module>content</module>
