CLASSES-1412 Build external help by default, and use it in the portal

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
                 <module>delegatedaccess</module>
                 <module>deploy</module>
                 <module>edu-services</module>
+                <module>external-help</module>
                 <module>emailtemplateservice</module>
                 <module>endorsed</module>
                 <module>entitybroker</module>
