--- a/portal/portal-impl/impl/pom.xml
+++ b/portal/portal-impl/impl/pom.xml
@@ -80,6 +80,9 @@
         <dependency>
             <groupId>org.sakaiproject.pasystem</groupId>
             <artifactId>pasystem-api</artifactId>
+            <groupId>edu.nyu.classes.externalhelp</groupId>
+            <artifactId>externalhelp-api</artifactId>
+            <version>${sakai.version}</version>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject.basiclti</groupId>
