CLASSES-1412 Hook lessonbuilder in to the external help system

--- a/lessonbuilder/tool/pom.xml
+++ b/lessonbuilder/tool/pom.xml
@@ -58,6 +58,12 @@
             <artifactId>entitybroker-api</artifactId>
         </dependency>
         <dependency>
+            <groupId>edu.nyu.classes.externalhelp</groupId>
+            <artifactId>externalhelp-api</artifactId>
+            <version>${sakai.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.sakaiproject.entitybroker</groupId>
             <artifactId>entitybroker-utils</artifactId>
         </dependency>
