--- a/portal/portal-impl/impl/pom.xml
+++ b/portal/portal-impl/impl/pom.xml
@@ -83,6 +83,7 @@
             <groupId>edu.nyu.classes.externalhelp</groupId>
             <artifactId>externalhelp-api</artifactId>
             <version>${sakai.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject.basiclti</groupId>
