--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,7 @@
                 <module>pasystem</module>
                 <module>nyugrades</module>
                 <module>nyuhome-feed</module>
+                <module>nyuclasses-job-test</module>
                 <module>podcasts</module>
                 <module>polls</module>
                 <module>portal</module>
