First version of a new SCORM Cloud integration for Sakai.
The big ideas:

  * The primary entry point is the Lessons tool.  Instructors can upload
    their SCORM modules to a lesson.

  * Uploaded modules are processed asynchronously.  Zip files go into a
    queue, and the queue is periodically processed to complete the
    uploads to SCORM Cloud in a reliable way.

  * Students can access the modules from a given lesson and get sent off
    to SCORM Cloud to take a module.

  * A background job periodically syncs results from SCORM Cloud with
    the Sakai gradebook.

--- a/lessonbuilder/tool/pom.xml
+++ b/lessonbuilder/tool/pom.xml
@@ -94,6 +94,12 @@
             <artifactId>samigo-services</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.sakaiproject.scormcloudservice</groupId>
+            <artifactId>scormcloud-service-api</artifactId>
+            <scope>provided</scope>
+            <version>${sakai.version}</version>
+        </dependency>
+        <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
         </dependency>
