--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
                 <module>feedback</module>
                 <module>gradebook</module>
                 <module>gradebookng</module>
+                <module>groupersync</module>
                 <module>help</module>
                 <module>hierarchy</module>
                 <module>jobscheduler</module>
