--- a/portal/portal-impl/impl/pom.xml
+++ b/portal/portal-impl/impl/pom.xml
@@ -80,6 +80,8 @@
         <dependency>
             <groupId>org.sakaiproject.pasystem</groupId>
             <artifactId>pasystem-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>edu.nyu.classes.externalhelp</groupId>
             <artifactId>externalhelp-api</artifactId>
             <version>${sakai.version}</version>
