--- a/providers/nyudirectory/pom.xml
+++ b/providers/nyudirectory/pom.xml
@@ -4,27 +4,17 @@
   <parent>
     <artifactId>providers-base</artifactId>
     <groupId>org.sakaiproject</groupId>
-    <version>12.5</version>
+    <version>12.4</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
-  <name>sakai-jldap-provider</name>
-  <groupId>org.sakaiproject</groupId>
-  <artifactId>sakai-jldap-provider</artifactId>
-  <organization>
-    <name>Sakai Project Contributor see (see NOTICE.txt)</name>
-    <url>http://sakaiproject.org/</url>
-  </organization>
-  <inceptionYear>2005</inceptionYear>
+  <name>nyudirectory-provider</name>
+  <groupId>edu.nyu.clases</groupId>
+  <artifactId>nyudirectory-provider</artifactId>
   <packaging>jar</packaging>
   <properties>
     <deploy.target />
   </properties>
   <dependencies>
-    <dependency>
-      <groupId>org.sakaiproject</groupId>
-      <artifactId>sakai-userdetail-provider</artifactId>
-    </dependency>
-    
     <dependency>
       <groupId>org.sakaiproject.kernel</groupId>
       <artifactId>sakai-kernel-util</artifactId>
@@ -36,11 +26,6 @@
     <dependency>
       <groupId>org.sakaiproject.kernel</groupId>
       <artifactId>sakai-component-manager</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>edu.nyu.clases</groupId>
-      <artifactId>nyudirectory-provider</artifactId>
-      <version>12.4</version>
     </dependency>
 <!--
       This has been relocated to sakai-kernel-util
@@ -58,33 +43,15 @@
       <artifactId>commons-lang</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.novell.ldap</groupId>
-      <artifactId>jldap</artifactId>
-      <version>2009-10-07</version>
-    </dependency>
-    <dependency>
-      <groupId>jmock</groupId>
-      <artifactId>jmock</artifactId>
-      <version>1.1.0</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>jmock</groupId>
-      <artifactId>jmock-cglib</artifactId>
-      <version>1.1.0</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>cglib</groupId>
-      <artifactId>cglib-full</artifactId>
-      <version>2.0.2</version>
-      <scope>test</scope>
+      <groupId>org.sakaiproject</groupId>
+      <artifactId>sakai-unboundid-provider</artifactId>
     </dependency>
 <!-- This exists strictly so we can control logging
     	levels in Maven-executed unit tests -->
     <dependency>
-      <groupId>org.sakaiproject</groupId>
-      <artifactId>sakai-jldap-provider-mock</artifactId>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.8</version>
       <scope>test</scope>
     </dependency>
 <!--org.sakaiprojectsakai-authz-api${sakai.version}-->
@@ -109,19 +76,6 @@
         </configuration>
       </plugin>
     </plugins>
-    <resources>
-      <resource>
-        <directory>src/resources</directory>
-      </resource>
-    </resources>
-    <testResources>
-      <testResource>
-        <directory>src/test-resources</directory>
-        <includes>
-          <include>log4j.properties</include>
-        </includes>
-      </testResource>
-    </testResources>
 <!-- java source -->
   </build>
 </project>
