CLASSES-2335 Styling updates for Resources Tool

--- a/content/content-bundles/resources/types.properties
+++ b/content/content-bundles/resources/types.properties
@@ -598,3 +598,12 @@ zipdownload.maxTotalSize=The files to download exceed the maximum allowed size (
 #SAK-30924
 label.overwrite.warning=Warning: Existing files will be overwritten.
 overwrite.text=Overwrite existing files
+
+# NYU Customizations
+avail.show40=Visible to Students
+avail.hide40=Hidden from Students
+avail.show1=Show to Students
+avail.show2=Show to Students
+avail.hide10=Hide folder from Students
+avail.hide20=Hide folder from Students but allow access to its contents
+avail.hide30=Hide both folder and its contents from Students
