--- a/samigo/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AssessmentSettingsMessages.properties
+++ b/samigo/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AssessmentSettingsMessages.properties
@@ -311,3 +311,6 @@ extendedTimeAdd=Add a Time Limit/Delivery Date Exception.
 # Expand Collapse
 expandAll=Expand All
 collapseAll=Collapse All
+
+# NYU Customizations
+immediate_feedback=Feedback Viewable While Taking Assessment
