--- a/attendance_report/pom.xml
+++ b/attendance_report/pom.xml
@@ -53,6 +53,11 @@
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
     </dependency>
-
+    <dependency>
+      <groupId>org.sakaiproject.attendance</groupId>
+      <artifactId>attendance-api</artifactId>
+      <scope>provided</scope>
+      <version>20170215</version>
+    </dependency>
   </dependencies>
 </project>
